# Study-Aggregator

./: .coilignore  .gitignore  LICENSE  README.md  Study Aggregator.py  StudyAggSetup.iss  build.bat  coil.toml  reg.py  req.txt  setup.iss  setup.py  unreg.py  update_checker.py
.github/workflows/: build.yml
engine/: Cargo.toml
engine/src/: dicom.rs  main.rs  patient.rs  progress.rs  types.rs  zip_handler.rs
