[package]
name = "study-agg-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9"
zip = { version = "2", features = ["aes-crypto", "deflate"] }
jwalk = "0.8"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
strip = true
